hledger/test/errors/csvbalanceparse.csv.rules
skip 2
date %1
balance %2
